# Proyecto-1-Lenguajes

./: Main.hs  Mundo.txt  README.md  aventura-texto.cabal  stack.yaml
Engine/: Core.hs  Parser.hs  Persistence.hs  Types.hs
